updated index.html.bak, changed color to beige

--- a/css/screen.css
+++ b/css/screen.css
@@ -244,7 +244,7 @@ label {
 
 /* ===== STATE STYLES ======= */
 body {
-  background-color: lightgreen;
+  background-color: beige;
   text-align: center;
   width: auto;
 
